--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -14,10 +14,7 @@
 </head>
 <body ng-app="myApp" ng-controller="Ctrl">
 
+    <video-box source="/Room6882/Streamer5922"></video-box>
 
-    <video-stream source="/Room6882/Streamer5922"></video-stream>
-
-
-    </div>
 </body>
 </html>
